[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.26" }
fern = { version = "0.7.1", features = ["date-based"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.44.0", features = ["full"] }
dashmap = "6.1.0"
bytes = "1.10.1"
once_cell = "1.21.0"
serde = { version = "1", features = ["derive"] }
#serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
constructor = { path = "../macros/constructor" }
confgen = { path = "../macros/confgen" }
exception = { path = "../exception" }
#ctrlc = "3.4"
daemonize = "0.5"
users = "0.11"
#nix = {version = "0.29",features = ["fs","signal"]}
libc = "0.2.171"
#加解密
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "1.0.0"
rand = "0.9.0"
bytebuffer = "2.3.0"
base64 = "0.22.1"
ctor = "0.4"
sqlx = { version = "0.8", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "default",
    "chrono",
] }

[dev-dependencies]
serde_json = "1.0.124"

[features]
default = ["net", "dbx"]
net = []
dbx = []
