[package]
name = "confgen"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20"
clap = { version = "4.4" }
confmacro = { path = "confmacro" }
constructor = { path = "../constructor" }
dashmap = "6.1.0"

[dev-dependencies]
ctor = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
